# dnd_helper

./: .gitignore  README.md  build.sh
backend/: Cargo.toml  config.toml  config.yaml
backend/src/: constants.rs  main.rs
backend/src/utils/: app_state.rs  lifecycle.rs  mod.rs  sqlite_utils.rs
backend/src/web_server/: embed.rs  mod.rs  web_server.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  stats.html  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: DiceIcon.vue  OneRowAutoFitText.vue
frontend/src/components/Common/: DiceDiv.vue  DiceResultContainer.vue  DiceResultToast.vue  DiceRollerPanel.vue  ToastContainer.vue
frontend/src/components/Icons/: DamageTypeIcon.vue  DiceIcon.vue  HitIcon.vue  ModifyIcon.vue  MutiDiceIcon.vue  SusceptibilityIcon.vue
frontend/src/components/MainLayout/: CharacterSheetDnD5.vue  CharacterSheetDnD5R.vue
frontend/src/composables/: useDiceBox.ts  useDiceBoxOld.ts  useDnd5rLogic.ts  useGlobalState.ts
frontend/src/composables/rules/: useDnd5Logic.ts  useDnd5rLogic.ts
frontend/src/directives/: longpress.ts
frontend/src/router/: index.ts
frontend/src/stores/: active-character.ts  dice-result.ts  toast.ts
frontend/src/stores/rules/: dnd5.ts  dnd5r.ts
frontend/src/types/: dice-box.d.ts  dice-parser-interface.d.ts
frontend/src/utils/dice/: Cargo.toml
frontend/src/utils/dice/src/: grammar.pest  grammar.rs  lib.rs  typecheck.rs
frontend/src/utils/dice/tests/: grammar.rs
frontend/src/views/: MainLayout.vue
(+52 files in other folders)
