[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
mimalloc = "0.1.48"
tracing = "0.1.31"
tower-http = { version = "0.6.7", features = ["fs", "trace"] }
mime_guess = "2.0.5"
rust-embed = "8.9.0"
tokio = { version = "1.48.0", features = ["full"] }
yaml-rust2 = "0.10.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }