[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
mimalloc = "0.1.48"
tracing = "0.1.31"
tower-http = { version = "0.6.7", features = ["fs", "trace"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = "0.4.41"