[package]
name = "dice_roller"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.106"
tsify = {version = "0.5.6", features = ["js"] }
pest = "2.8.4"
pest_derive = "2.8.4"
lazy_static = "1.5.0"
